Footer, CSS comments, sam mov, tyler1 mov

--- a/AnnaWebsite/site.html
+++ b/AnnaWebsite/site.html
@@ -22,6 +22,8 @@
     
   <section id="content1">
     <p>
+    <!--
+    <p style="background-image: url('pastelClouds.png');">-->
       MAIN. Paragraph 1, Tab 1. 
       Bacon ipsum dolor sit amet beef venison beef ribs kielbasa. Sausage pig leberkas, t-bone sirloin shoulder bresaola. Frankfurter rump porchetta ham. Pork belly prosciutto brisket meatloaf short ribs.
     </p>
@@ -102,7 +104,7 @@
     </p>
 
     <center> <video width="320" height="540" controls>
-      <source src="tyler.mov" type="video/mp4">
+      <source src="tyler1.mov" type="video/mp4">
     Your browser does not support the video tag.
     </video> </center> 
 
@@ -113,3 +115,6 @@
   </section>
     
 </main>
+
+<center><footer style="font-size: 9px">Skeleton cred: <a href = "https://alvarotrigo.com/blog/html-css-tabs/">20 Cool HTML & CSS Tabs [Examples]</a>" (#17) </footer>
+</center>
