--- a/AnnaWebsite/site.html
+++ b/AnnaWebsite/site.html
@@ -58,7 +58,7 @@
       Bacon ipsum dolor sit amet beef venison beef ribs kielbasa. Sausage pig leberkas, t-bone sirloin shoulder bresaola. Frankfurter rump porchetta ham. Pork belly prosciutto brisket meatloaf short ribs.
     </p>
     <center> <video width="320" height="540" controls>
-      <source src="sam.mov" type="video/mp4">
+      <source src="sam1.mov" type="video/mp4">
     Your browser does not support the video tag.
     </video> </center>
     <p>
